--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input
           type="text"
           class="search-btn"
-          id="search-input"
+          id="search-city"
           placeholder="Enter a city..."
         />
         <button class="search-btn" id="search-btn">Search</button>
